Added styling to main page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -9,26 +8,94 @@
 </head>
 
 <body>
-    <h1>Bootcamp Diaries</h1>
-    <p>This is where I'll be documenting my journey on The Growth Company's 11 week Skills Bootcamp in Software
-        Development. I'll be posting what I have learnt and my progress on the course. So far we have been concentraing
-        on Javascript, HTML and CSS. Happy reading!</p>
-    <a href="https://www.gceducationandskills.ac.uk/all-courses/skills-bootcamp-in-software-development/">Growth Company
-        Bootcamp details</a>
-    <h2>Breakdown</h2>
 
-    <nav class='navbar'>
+    <main class="main">
 
-        <ul class='menu'>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Week1.html">Week 1</a></li>
-            <li><a href="Week2.html">Week 2</a></li>
-        </ul>
-    </nav>
 
-    <p><img src="imageCoding.jpg" width="400" height="400">
-        <img src="JS.png">
-    </p>
+        <!-- Header -->
+        <header class="header">
+
+            <nav class="navbar">
+                <span class="logo">
+                    <img src="S.png" height="30px" width="30px" />
+                </span>
+
+                <ul class="navbar-content">
+                    <li class="navbar-links"><a href="index.html">Home</a></li>
+                    <li class="navbar-links"><a href="Week1.html">Week 1</a></li>
+                    <li class="navbar-links"><a href="Week2.html">Week 2</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Hero -->
+        <section class="hero">
+            <div class="hero-left">
+
+                <h1>Bootcamp Diaries</h1>
+                <p>This is where I'll be documenting my journey on The Growth Company's 11 week Skills Bootcamp in
+                    Software
+                    Development. I'll be posting what I have learnt and my progress on the course. So far we have
+                    been
+                    concentraing
+                    on Javascript, HTML and CSS. Happy reading!</p>
+
+                <a href="https://www.gceducationandskills.ac.uk/all-courses/skills-bootcamp-in-software-development/">Growth
+                    Company
+                    Bootcamp details</a>
+            </div>
+
+            <div class="hero-right">
+
+                <img src="codeimage.jpeg" />
+            </div>
+
+        </section>
+
+        <div class="container">
+
+            <section class="content">
+
+                <div class="cards">
+                    <div class="card">
+                        <img src="js image.png" alt="Avatar" style="width:100%">
+                        <div class="card-container">
+                            <h4><b>Week 1</b></h4>
+                            <p>JavaScript Fundamentals</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="JS.png" alt="Avatar" style="width:100%">
+                        <div class="card-container">
+                            <h4><b>Week 2</b></h4>
+                            <p>Delving into HTML & CSS</p>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </section>
+
+        </div>
+
+
+
+
+
+        <!-- Footer -->
+        <footer class="footer">
+            <p>Contact us</p>
+            <p>Terms and Conditions</p>
+            <p>Social Media Links</p>
+        </footer>
+    </main>
+
+
+
+
 </body>
 
-</html>
+
+</html lang="en">
