Added styling and content

--- a/Week2.html
+++ b/Week2.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 2</title>
+    <p>Week 2: HTML & CSS Adventure
+        Week 2 marked the beginning of a new chapter in my coding journey as we delved into the world of HTML and CSS.
+        HTML is the language that gives structure to web pages. I learned how to piece the elements of HTML together
+        which form the skeleton of a webpage.
+
+    </p>
 </head>
 
 <body>
