--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
     <title>Bootcamp diaries</title>
 </head>
@@ -32,8 +35,9 @@
         <section class="hero">
             <div class="hero-left">
 
-                <h1>Bootcamp Diaries</h1>
-                <p>This is where I'll be documenting my journey on The Growth Company's 11 week Skills Bootcamp in
+                <h1 class="hero-title">BOOTCAMP DIARIES</h1>
+                <p class="hero-subtitle">This is where I'll be documenting my journey on The Growth Company's 11 week
+                    Skills Bootcamp in
                     Software
                     Development. I'll be posting what I have learnt and my progress on the course. So far we have
                     been
@@ -56,24 +60,27 @@
 
             <section class="content">
 
-                <div class="cards">
-                    <div class="card">
-                        <img src="js image.png" alt="Avatar" style="width:100%">
-                        <div class="card-container">
-                            <h4><b>Week 1</b></h4>
-                            <p>JavaScript Fundamentals</p>
-                        </div>
-                    </div>
 
-                    <div class="card">
-                        <img src="JS.png" alt="Avatar" style="width:100%">
-                        <div class="card-container">
-                            <h4><b>Week 2</b></h4>
-                            <p>Delving into HTML & CSS</p>
-                        </div>
-                    </div>
+                <section id="cards">
+                    <div class="cards-container">
 
-                </div>
+                        <div class="card">
+                            <h3>Week 1</h3>
+                            <p class="label">Portfolio</p>
+                            <a href="#">Overview of my first week. JavaScript Fundamentals</a>
+                        </div>
+
+                        <div class="card">
+                            <h3>Week 2</h3>
+                            <p class="label">Forms</p>
+                            <a href="#">Exploring HTML & CSS</a>
+                        </div>
+
+                    </div>
+                </section>
+
+
+            </section>
 
 
             </section>
