--- a/Week1.html
+++ b/Week1.html
@@ -10,11 +10,46 @@
 <body>
     <h1>Javascript Fundamentals. Learning the basics.</h1>
     <p><img src="js image.png"></p>
-    <p>Week 1 was an introduction to Javascript. I learnt the fundamentals which included:</p>
-    <h2>Code snippets</h2>
+    <p>Day 1: Dot Notation & Data Types<br>
+        We explored Dot Notation and Data Types. Dot Notation is a way to interact with objects, enabling us to read,
+        modify, and invoke properties. Data Types are the values we instruct the computer to work with, such as numbers,
+        strings, and booleans.
+        By the end of day 1, I created a nifty random number generator program. It was amazing that with just one line
+        of code, I could conjure up random numbers effortlessly.<br><br>
 
+        Day 2: Variable Exploration and Naming Conventions<br>
+        Day 2 was an adventure in variables. I learned how they store different types of data and how to manipulate
+        them. We covered the various ways to declare a variable and the art of JavaScript naming conventions.
+        It felt like I was handed a toolkit of endless possibilities. The more I experimented, the more I realized the
+        potential in my code.<br><br>
 
-    <h2>End of week project</h2>
+        Day 3: If Else Statements<br>
+        Day 3 was all about adding logic to our code. We dove into the world of If-Else statements, giving our programs
+        the power to make decisions.
+        Using Comparison Operators, I practised making my code perform different actions for different decisions.
+        I first practised making a program with a single condition and then crafted a program using multiple conditions,
+        making the code execute different moves depending on the situation.
+        Comparison operators and logical operators<br><br>
+
+        Day 4: Arrays/Loops<br>
+        Day 4 we studied arrays and objects: Manipulating arrays, accessing object properties, and using built-in
+        methods. Going through loops was eye-opening, in JavaScript one line can be written to repeat a task based on a
+        condition automatically a certain number of times. <br><br>
+
+        Day 5: JS Tasks<br>
+        Day 5 brought forth an exciting challenge: completing JavaScript tasks in pairs. It was a good opportunity to
+        put our newly acquired knowledge to the test and apply the concepts we had learned throughout the week. Teaming
+        up with a fellow boot camper we tackled the challenges together. We shared insights, compared code, and
+        complemented each other's strengths. As we worked through the challenges, I could feel a sense of accomplishment
+        with every problem solved.<br><br>
+
+        This first week was a whirlwind of learning, and I'm eagerly anticipating what's in store for the upcoming
+        weeks. Learning JavaScript has proven to be quite an exciting ride!
+    </p>
+    <!-- <h2>Code snippets</h2>
+    <h3>Code Wars</h3> -->
+
+    <!-- <h2>End of week project</h2> -->
 </body>
 
 </html>
