--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 
             <nav class="navbar">
                 <span class="logo">
-                    <img src="S.png" height="30px" width="30px" />
+                    <img src="logoImage.png" height="30px" width="30px" />
                 </span>
 
                 <ul class="navbar-content">
                     <li class="navbar-links"><a href="index.html">Home</a></li>
-                    <li class="navbar-links"><a href="Week1.html">Week 1</a></li>
-                    <li class="navbar-links"><a href="Week2.html">Week 2</a></li>
+                    <li class="navbar-links"><a href="week1.html">Week 1</a></li>
+                    <li class="navbar-links"><a href="week2.html">Week 2</a></li>
+                    <li class="navbar-links"><a href="codeWars.html">Coding challenge websites</a></li>
+                    <li class="navbar-links"><a href="jobSkills.html">Employability Skills</a></li>
                 </ul>
             </nav>
         </header>
@@ -42,7 +44,7 @@
                     Development. I'll be posting what I have learnt and my progress on the course. So far we have
                     been
                     concentraing
-                    on Javascript, HTML and CSS. Happy reading!</p>
+                    on Javascript, HTML and CSS. Journal entries will be posted for each week. Happy reading!</p>
 
                 <a href="https://www.gceducationandskills.ac.uk/all-courses/skills-bootcamp-in-software-development/">Growth
                     Company
@@ -66,14 +68,30 @@
 
                         <div class="card">
                             <h3>Week 1</h3>
-                            <p class="label">Portfolio</p>
-                            <a href="#">Overview of my first week. JavaScript Fundamentals</a>
+                            <p class="blog-post-date">October 19, 2023</p>
+                            <p class="label">Journal entry for Week 1</p>
+                            <a href="#">JavaScript Fundamentals</a>
                         </div>
 
                         <div class="card">
                             <h3>Week 2</h3>
-                            <p class="label">Forms</p>
-                            <a href="#">Exploring HTML & CSS</a>
+                            <p class="blog-post-date">October 22, 2023</p>
+                            <p class="label">Journal entry for Week 2</p>
+                            <a href="#">HTML & CSS</a>
+                        </div>
+
+                        <div class="card">
+                            <h3>Week 2</h3>
+                            <p class="blog-post-date">October 25, 2023</p>
+                            <p class="label">Learning by doing</p>
+                            <a href="#">Codewars</a>
+                        </div>
+
+                        <div class="card">
+                            <h3>Week 1 & 2</h3>
+                            <p class="blog-post-date">October 25, 2023</p>
+                            <p class="label">Getting prepared for the job market</p>
+                            <a href="#">Employability Skills</a>
                         </div>
 
                     </div>
