--- a/Week2.html
+++ b/Week2.html
@@ -1,4 +1,129 @@
 <!DOCTYPE html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
+    <title>Bootcamp diaries</title>
+</head>
+
+<body>
+
+    <main class="main">
+
+
+        <!-- Header -->
+        <header class="header">
+
+            <nav class="navbar">
+                <span class="logo">
+                    <img src="logoImage.png" height="30px" width="30px" />
+                </span>
+
+                <ul class="navbar-content">
+                    <li class="navbar-links"><a href="index.html">Home</a></li>
+                    <li class="navbar-links"><a href="week1.html">Week 1</a></li>
+                    <li class="navbar-links"><a href="week2.html">Week 2</a></li>
+                    <li class="navbar-links"><a href="codeWars.html">Coding challenge websites</a></li>
+                    <li class="navbar-links"><a href="jobSkills.html">Employability Skills</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Hero -->
+        <section class="hero">
+            <div class="hero-left">
+
+                <h1 class="hero-title">My second week</h1>
+                <p class="hero-subtitle"></p>
+
+
+            </div>
+
+            <!-- <div class="hero-right">
+
+                <img src="codeimage.jpeg" />
+            </div> -->
+
+        </section>
+
+        <div class="container">
+
+            <section class="content">
+
+
+                <p>As an aspiring front-end web developer, I was brimming with excitement to venture into the realm of
+                    website building and design. While I had dabbled in basic Python and JavaScript, HTML & CSS were
+                    uncharted territory for me. The prospect of delving into this space was exciting.<br><br>
+                    HTML: <br>
+                    HTML, the cornerstone of web development, is the language that breathes structure into web pages. It
+                    lays the very foundation upon which every website is built. From defining headings and paragraphs to
+                    crafting lists, it forms the scaffolding of content. Moreover, it serves as a canvas for embedding
+                    multimedia, from images that tell stories to links that connect worlds.<br>
+                    CSS: <br>
+                    With CSS (Cascading Style Sheets), I unlocked the power to make webpages not only functional but
+                    also visually appealing. It's the tool that styles text, backgrounds, and outlines borders. Through
+                    Flexbox, I researched elements, how to arrange them in rows, creating visually appealing
+                    layouts.<br>
+                    Semantic HTML: <br>
+                    This phase was more than just about code; it was about understanding the principles of web
+                    development. Semantic HTML, the building blocks of the digital world. I was starting to understand
+                    the reason and purpose of using semantic tags in HTML was to organize the script based on the
+                    meaning of the HTML element rather than how it looks.<br>
+                    Responsive Design: <br>
+                    A website's ability to look impeccable- regardless of the device is very important. Responsive
+                    design was the key to achieving this. With media queries, I learned to adapt layouts seamlessly,
+                    ensuring images scaled gracefully and content flowed harmoniously across phones, tablets, and
+                    desktops.<br><br>
+                    This week has been a whirlwind journey through the essentials of front-end development. With
+                    continued practice and honing of these skills, I'm looking forward to creating great web experiences
+                    and unlocking more potential when we come to include JavaScript.
+
+
+
+
+                </p>
+
+        </div>
+        </section>
+
+
+        </section>
+
+
+        </section>
+
+        </div>
+
+
+
+
+
+        <!-- Footer -->
+        <footer class="footer">
+            <p>Contact us</p>
+            <p>Terms and Conditions</p>
+            <p>Social Media Links</p>
+        </footer>
+    </main>
+
+
+
+
+</body>
+
+
+</html lang="en">
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,4 +142,4 @@
 
 </body>
 
-</html>
+</html> -->
